Native/Test/KL/error-no-uni-op.out
error-no-uni-op.kl:9:3: error: unary operator '-' not supported for expressions of type 'S'
